--- a/pom.xml
+++ b/pom.xml
@@ -49,5 +49,12 @@
             <artifactId>gson</artifactId>
             <version>2.8.5</version>
         </dependency>
+
+        <!-- Faker Repo -->
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>0.16</version>
+        </dependency>
     </dependencies>
 </project>
